--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -25,5 +25,9 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="FileRepository\" />
+    </ItemGroup>
     
 </Project>
